<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Generate_QR_Activity">
    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/gen_FL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">
        <TextView
            android:id="@+id/gen_qr_code_appear_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:text="@string/your_code_will_appear_here"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="4dp"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="250dp"

            android:layout_height="250dp"
            android:id="@+id/gen_qr_iv"
            android:background="#F2F4F4"/>

    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="10dp"
        app:boxStrokeColor="@color/black"
        android:hint="@string/add_text_to_embed_in_qr_code"
        android:id="@+id/gen_text_til"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        app:cursorColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_below="@id/gen_FL"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:id="@+id/gen_editText"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/gen_QR_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/gen_text_til"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/generate_qr_code"/>

</RelativeLayout>